# feather

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
assets/: CMakeLists.txt
assets/images/: CMakeLists.txt
assets/models/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  feather.rc  main.cpp
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  attribute.hpp  curve.hpp  deps.hpp  draw.hpp  field.hpp  node.hpp  parameter.hpp  pluginmanager.cpp  pluginmanager.hpp  render.hpp  scenegraph.hpp  selection.hpp  state.hpp  tools.cpp  tools.hpp  types.hpp  ui.hpp
src/lib/plugin/: CMakeLists.txt  core_access.cpp  core_access.hpp  plugin.cpp  plugin.hpp
src/lib/qml/: CMakeLists.txt  commands.cpp  commands.hpp  field_model.cpp  field_model.hpp  qml.cpp  qml.hpp  qml_deps.hpp  qml_status.cpp  qml_status.hpp  render_image.cpp  render_image.hpp  sg_editor.cpp  sg_editor.hpp  swapchain.hpp  tree_model.cpp  tree_model.hpp  viewport.cpp  viewport.hpp  viewport4.cpp  viewport4.hpp  window.cpp  window.hpp
src/lib/qml/shaders/: CMakeLists.txt  build_shaders.sh
src/lib/vulture/: CMakeLists.txt  axis.hpp  basenode.cpp  basenode.hpp  build_python_wrapper.sh  grid.hpp  mesh.cpp  mesh.hpp  pipelines.hpp  pointlight.hpp  pyvulture.py  qvulkanwindow.cpp  qvulkanwindow.hpp  swapchain.hpp  textureloader.hpp  vulture  vulture.i  vulture_cpp.cpp  vulture_wrap.cxx  window.cpp  window.hpp
src/lib/vulture/shaders/: CMakeLists.txt  point.mesh.geom.spv  point.mesh.vert.spv  shade.light.vert.spv  shade.mesh.geom.spv  shade.mesh.vert.spv  wire.axis.geom.spv  wire.axis.vert.spv  wire.grid.geom.spv  wire.light.geom.spv  wire.mesh.geom.spv  wire.mesh.vert.spv  wire.vert.spv
src/python_test/: CMakeLists.txt  feather.py
src/qml/: AddMenu.qml  AddNodeDialog.qml  Button.qml  CMakeLists.txt  ColorProperties.qml  CommandLine.qml  ExportPlyDialog.qml  FieldEditor.qml  FieldEditorValue.qml  FieldPopup.qml  FieldValue.qml  FileMenu.qml  GroupBox.qml  ImageButton.qml  KeyToolBar.qml  KeyTrack.qml  KeyframeEditor.qml  LayerEditor.qml  MainMenu.qml  MainToolBar.qml  MenuItem.qml  MenuPanel.qml  MorphEditor.qml  NodeFields.qml  NodeMenu.qml  NodeMenuItem.qml  NodeModel.qml  NodeTypeModel.qml  OptionBox.qml  Outliner.qml  OutlinerLeafNode.qml  PopupMenu.qml  Properties.qml  PushButton.qml  RenderWindow.qml  SceneGraphConnectionDialog.qml  SceneGraphEditor.qml  SubdivMenu.qml  TabPanel.qml  TabView.qml  (+14 more)
src/qml/common/: CMakeLists.txt  FMainMenuStyle.qml  FMenuBarStyle.qml  FMenuStyle.qml  FSplitView.qml  FTheme.qml  FWindow.qml
