SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_CXX_LINK_FLAGS "-lvulkan")
SET(CMAKE_CXX_LINK_FLAGS "-lassimp")
SET(CMAKE_CXX_LINK_FLAGS "-lxcb")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_XCB_KHR")

MESSAGE(STATUS ${VULKAN_LIB})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX -DVK_PROTOTYPES -D_USE_MATH_DEFINES")

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Quick REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Qt5Qml REQUIRED)

SET(feather_SRCS
 main.cpp
)

#SET(QT_USE_QTOPENGL TRUE)

INCLUDE_DIRECTORIES(${feather_core_SOURCE_DIR}
    ${feather_qml_SOURCE_DIR}
    ${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Widgets_INCLUDE_DIRS}
    ${Qt5Quick_INCLUDE_DIRS}
    ${Qt5Qml_INCLUDE_DIRS}
)

LINK_DIRECTORIES(${feather_core_BINARY_DIR}
    ${feather_qml_BINARY_DIR}
)

LINK_LIBRARIES(feather_qml feather_core)

ADD_DEFINITIONS( ${Qt5Widgets_DEFINITIONS}
    ${Qt5Quick_DEFINITIONS}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Qml_INCLUDE_DIRS}
)

SET(feather_LIBS
 ${Qt5Widgets_LIBRARIES}
 ${Qt5Quick_LIBRARIES}
 ${OPENGL_LIBRARIES}
 ${BOOST_LIBRARIES}
 ${Qt5Core_LIBRARIES}
 ${Qt5Gui_LIBRARIES}
 ${QT5Qml_LIBRARIES}
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include/boost")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Quick_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Gui_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Qml_EXECUTABLE_COMPILE_FLAGS}")

ADD_EXECUTABLE(feather ${feather_SRCS} ${feather_MOC_SRCS})

SET_TARGET_PROPERTIES(feather
    PROPERTIES
    CMAKE_CXX_STANDARD 11
    CMAKE_CXX_STANDARD_REQUIRED ON
)

TARGET_LINK_LIBRARIES(feather "-lvulkan" ${feather_LIBS})

QT5_USE_MODULES(feather Widgets Core Gui Qml Quick)

# Config file
FILE(GLOB CONFIG_FILES "feather.rc")
INSTALL(FILES ${CONFIG_FILES} DESTINATION /usr/local/feather)

# INSTALL
INSTALL( TARGETS feather
    RUNTIME DESTINATION /usr/local/feather)
